fixed spacing for projects section

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -204,6 +204,7 @@ body {
 .project-image-2,
   .project-image-1 {
     margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 /* Responsive Design */
